@@ -29,15 +29,21 @@ Created 5/11/1994 Heikki Tuuri
 #endif
 
 #include "mem0mem.h"
-#include "os0sync.h"
 #include "os0thread.h"
 #include "srv0srv.h"
+
+#include <stdlib.h>
 
 /* This struct is placed first in every allocated memory block */
 typedef struct ut_mem_block_struct ut_mem_block_t;
 
-/* The total amount of memory currently allocated from the OS with malloc */
-UNIV_INTERN ulint	ut_total_allocated_memory	= 0;
+/* The total amount of memory currently allocated from the operating
+system with os_mem_alloc_large() or malloc().  Does not count malloc()
+if srv_use_sys_malloc is set.  Protected by ut_list_mutex. */
+UNIV_INTERN ulint		ut_total_allocated_memory	= 0;
+
+/* Mutex protecting ut_total_allocated_memory and ut_mem_block_list */
+UNIV_INTERN os_fast_mutex_t	ut_list_mutex;
 
 struct ut_mem_block_struct{
 	UT_LIST_NODE_T(ut_mem_block_t) mem_block_list;
@@ -49,10 +55,8 @@ struct ut_mem_block_struct{
 #define UT_MEM_MAGIC_N	1601650166
 
 /* List of all memory blocks allocated from the operating system
-with malloc */
+with malloc.  Protected by ut_list_mutex. */
 static UT_LIST_BASE_NODE_T(ut_mem_block_t)   ut_mem_block_list;
-
-static os_fast_mutex_t ut_list_mutex;	/* this protects the list */
 
 static ibool  ut_mem_block_list_inited = FALSE;
 
