@@ -1,3 +1,13 @@
+2009-02-18	The InnoDB Team
+
+	* os/os0proc.c, ut/ut0mem.c, include/ut0mem.h:
+	Protect ut_total_allocated_memory with ut_list_mutex in
+	os_mem_alloc_large() and os_mem_free_large().  The lack of this
+	mutex protection could cause an assertion failure during fast
+	index creation.  Also, add UNIV_MEM_ALLOC and UNIV_MEM_FREE
+	instrumentation to os_mem_alloc_large() and os_mem_free_large(),
+	so that Valgrind can detect more errors.
+
 2009-02-11	The InnoDB Team
 
 	* handler/ha_innodb.cc:
